{
    "name": "PlayerInputs",
    "maps": [
        {
            "name": "Gameplay",
            "id": "fa986907-81d7-4270-a432-ed7e2e449d2b",
            "actions": [
                {
                    "name": "MouseAction",
                    "type": "Button",
                    "id": "f9dec217-547e-48f6-b62e-1af4be74d363",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "57343eba-313c-4cb4-bed8-7f4949b04887",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MouseAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "119e50f9-5c02-4632-bf91-22e8b1c1ac8b",
            "actions": [
                {
                    "name": "MenuB",
                    "type": "Button",
                    "id": "67249632-b4e9-462b-945b-54f0baa18b05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fe9c9247-4546-431f-9926-035c52091e2c",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "MenuB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Event",
            "id": "112b5605-877b-4edf-8bb0-48ba0a12b468",
            "actions": [
                {
                    "name": "ContinueDialogue",
                    "type": "Button",
                    "id": "00a2c010-8c7d-43f0-8143-0a8051839822",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseOption#1",
                    "type": "Button",
                    "id": "7b242c3f-2042-41b8-873d-1647e3ffda6f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseOption#2",
                    "type": "Button",
                    "id": "113ae382-5287-4b6e-b84b-4451c1dff323",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseOption#3",
                    "type": "Button",
                    "id": "ccd24e08-13a5-4e86-a1e8-f0fe4d4b6beb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bd58f7c6-e23b-489b-8a67-cce56d032597",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ContinueDialogue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "145be3f3-9fbb-4d9a-a09b-81ebbaed3f7b",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChooseOption#1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "754952c0-c121-4496-860f-58e76b7d49d4",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChooseOption#2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9553cd9-2beb-41b7-ab7c-4f813c94e9c8",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ChooseOption#3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "General",
            "id": "1827ea64-68cb-44f4-8e6f-fd2645abfc3c",
            "actions": [
                {
                    "name": "Swap1",
                    "type": "Button",
                    "id": "dd2f86b9-af89-46e6-bdbf-42ccbfe84d60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Swap2",
                    "type": "Button",
                    "id": "b9052bc0-d423-43a7-9eff-52e01d147962",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Swap3",
                    "type": "Button",
                    "id": "6249782c-a9a3-424a-a329-8348b21e5fc9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateCamera",
                    "type": "Value",
                    "id": "4c571a7b-687b-4331-9775-b9a263d23fde",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ScrollCamera",
                    "type": "Value",
                    "id": "90b711bc-a1ea-4e9f-b9ca-e2a42878da02",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "81daaa77-4f09-4b0e-b552-c9d22339b0d7",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "834fb2ce-2444-4cbc-82d2-0ddb2300f628",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3252be42-3c07-4814-af3c-ef223ca6eb97",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Swap3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "cda2d2a7-f839-4ff5-9b81-bff9155bd1d4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateCamera",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "91b47d93-2ff3-4cb3-9d8e-068d92b30743",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "728f0852-23ce-4a33-ae7e-99101d8254c0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "RotateCamera",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "aeaaaa75-cc97-40bf-9342-8e5e972d135b",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ScrollCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": []
        }
    ]
}